2015-02-08  6.9.0-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.0-5, SVN revision 17946.

2015-01-30  6.9.0-5 Glenn Randers-Pehrson <glennrp@image...>
  * In coders/gif.c, quiet two warnings.

2015-01-24  6.9.0-5 Dirk Lemstra <dirk@lem.....org>
  * Fixed iccColorProfile() in Magick++ (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=26910).
  * Fixed infinite loop in HDR reader (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26929).

2015-01-23  6.9.0-5 Glenn Randers-Pehrson <glennrp@image...>
  * Check lengths of certain MNG chunks before reading them.
  * In the PNG codec, check status wherever a function returns it.

2015-01-18  6.9.0-5 Cristy  <quetzlzacatenango@image...>
  * Remove possible resource memory leak in a multi-threaded program (bug
    report and patch from David Chapman <d...@acm.org>.
  * Small optimization to pixel cache.
  * More image sanity checks.
  * Support writing base64-encoded images (e.g
	  convert logo: inline:jpeg:logo.txt).
  * Repair small TIFF leak when pinging (patch provided by Andrey Cherniy).

2015-01-16  6.9.0-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.0-4, SVN revision 17697.

2015-01-07  6.9.0-4 Cristy  <quetzlzacatenango@image...>
  * Additional coder sanity checks (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26842,
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26682).

2015-01-05  6.9.0-4 Dirk Lemstra <dirk@lem.....org>
  * Report Ghostscript version when -verbose is used and when an exception
    is raised.
  * Fixed invalid path check in MagickCoreGenesis under Windows and disabled
    ProvideDllMain by default (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&p=118875).

2015-01-01  6.9.0-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.0-3, SVN revision 17537.

2015-01-01  6.9.0-3 Cristy  <quetzlzacatenango@image...>